// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interaction"
  >
    <form
      onSubmit={[Function]}
    >
      <span>
        Search
        : 
      </span>
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        className="button-inline button-submit"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        className="large-column"
      >
        <button
          className="button-row"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        className="mid-column"
      >
        <button
          className="button-row"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        className="small-column"
      >
        <button
          className="button-row"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        className="small-column"
      >
        <button
          className="button-row"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        className="small-column"
      >
        <span
          className="button-row"
        >
          Arvhive
        </span>
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div
      className="loading-spinner"
    >
      <i
        className="fas fa-sync fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <span>
    Search
    : 
  </span>
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    className="button-inline button-submit"
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      className="large-column"
    >
      <button
        className="button-row button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      className="mid-column"
    >
      <button
        className="button-row"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-row"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-row"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      className="small-column"
    >
      <span
        className="button-row"
      >
        Arvhive
      </span>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="large-column"
    >
      <a
        className="hits-title-link"
        href={undefined}
        target="_blank"
      >
        1
      </a>
    </span>
    <span
      className="mid-column hits-author"
    >
      1
    </span>
    <span
      className="small-column"
    >
      1
    </span>
    <span
      className="small-column"
    >
      2
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="large-column"
    >
      <a
        className="hits-title-link"
        href={undefined}
        target="_blank"
      >
        2
      </a>
    </span>
    <span
      className="mid-column hits-author"
    >
      2
    </span>
    <span
      className="small-column"
    >
      1
    </span>
    <span
      className="small-column"
    >
      2
    </span>
    <span
      className="small-column"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
